[package]
name = "cstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2.154", default-features = false }

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dev-dependencies]
tempfile = "3.10.1"
