[package]
name = "cstream"
version = "0.1.1"
edition = "2021"
description = "utilities for `libc::FILE` streams 'c streams'"
categories = [
    "embedded",
    "external-ffi-bindings",
    "no-std",
    "os",
    "no-std::no-alloc",
]
keywords = ["libc", "stream", "ffi"]
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/cstream"
documentation = "https://docs.rs/cstream"
repository = "https://github.com/aatifsyed/fopencookie"

[dependencies]
libc = { version = "0.2.154", default-features = false }

[features]
default = ["std"]
alloc = []
std = ["alloc", "libc/std"]

[dev-dependencies]
tempfile = "3.10.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "do_doc_cfg"]
